Fixed overflowing code snippets in CSS

--- a/partials/style.css
+++ b/partials/style.css
@@ -48,6 +48,7 @@ pre {
     margin-top: 1em;
     margin-bottom: 1em;
     background-color: #F4F4F4;
+    overflow: auto;
 }
 code {
     font-style: monospace;
